First ever commit

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "authors": [
     {
       "name": "William Odiomonafe",
-      "email": "william.odiomonafe@gmail.com",
+      "email": "william.odiomonafe@gmail.com"
     }
   ],
   "description": "The Lightweight Miniel Framework.",
